# barch

./: .gitignore  Makefile  README.md  pyproject.toml
barch/: barch.py  utils.py
barch/commands/: fingerprint.py
testing/: create_data.py  fingerprint.txt
testing/test_directory/: test_link.txt
tests/: conftest.py  test_barch.py  test_fingerprint.py
