[tool.poetry]
name = "barch"
version = "0.2.0"
description = "Tool to support backup and archival"
authors = ["Joachim Hereth <qudade-barch@quda.de>"]

[tool.poetry.dependencies]
python = "^3.7"
click = ">=7.0"
loguru = ">=0.2"
xxhash = "^2.0"
pandas = "^1.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.0"
pytest-check = "^0.3"
toml = "^0.10"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
